# certify-studio

./: .env.example  .env.postgresql  .gitignore  .gitmessage  CHANGELOG.md  COMMIT_MESSAGE.txt  Dockerfile  FINAL_SUMMARY_PROJECT_RESTORED.md  FIX_INSTRUCTIONS.md  GIT_SETUP_MANUAL.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RECOVERY_AND_ENHANCEMENT_PLAN.md  RUN_TESTS_FIXED.bat  SESSION_SUMMARY.md  STARTING_THE_PROJECT.md  TESTING_IMPLEMENTATION_SUMMARY.md  alembic.ini  auth_fix.py  check_deps.py  check_python.bat  clean_branch.ps1  clean_install.bat  cleanup.bat  commit.bat  commit.sh  commit_comprehensive.bat  commit_domain_extraction.sh  commit_fixed.bat  commit_frontend.bat  commit_to_github.bat  comprehensive_fix.py  conftest.py  create_milestone_branch.txt  diagnose_database.py  direct_test.bat  docker-compose.postgres.yml  (+127 more)
_old_code_cleanup/: fix_and_start.bat  fix_startup.py  install_missing.py  migration_old.py  quickstart.py  smart_start.py  start.bat
_old_code_cleanup/graphrag_old/: example_usage.py  graph_store.py  integrated_lesson_generator.py  models.py  troubleshooting_engine.py
deployments/: Dockerfile  docker-compose.yml
docs/: API_IMPLEMENTATION_COMPLETE.md  BACKEND_FRONTEND_INTEGRATION.md  BACKLOG_STUDY_FEATURES.md  CONTINUATION.md  DEPENDENCY_MANAGEMENT.md  FRONTEND_SETUP.md  INTEGRATION_LAYER.md  PROJECT_STATUS_UPDATE.md  PYTHON_312_SETUP.md  PYTHON_313_COMPATIBILITY.md  QUALITY_ASSURANCE_COMPLETE.md  QUICK_START_GUIDE.md  README.md  RECOVERY_SUCCESS_STORY.md  SESSION_SUMMARY_DOMAIN_EXTRACTION.md  SYSTEM_AUDIT_REPORT copy.md  TESTING_GUIDE.md  TESTING_STRATEGY.md  UNIFIED_GRAPHRAG_SUMMARY.md  VISION copy.md  VISION.md  WINDOWS_AUDIO_SETUP.md  getting-started.md  index.md  project-organization-plan.md  z_run.txt
docs/FUTURE_FEATURES/: additional_features.md
docs/IMMUTABLE_VISION/: AI_AGENT_OPERATING_SYSTEM.md  CERTIFY_STUDIO_MASTER_BLUEPRINT.md  DOMAIN_ABSTRACTION.md  MASTER_BLUEPRINT_AI_ORCHESTRATION_PLATFORM_PART3.md  MASTER_BLUEPRINT_DEFINITIVE.md  README.md
docs/IMMUTABLE_VISION/Recovery Fix Scripts/: RECOVERY_MISSION_CONTEXT.md  certify-studio-setup-guide.md  diagnose_system.py  fix_imports.py  next_steps_guide.md  restore_full_system.bat
docs/SESSION_SUMMARIES/: testing_suite_implementation.md
docs/architecture/: README.md  agentic-architecture copy.md  system-architecture.md
docs/backup/IMMUTABLE_VISION/: COMPLETE_EXAMPLE.md  COMPLETE_EXAMPLES.md  IMPLEMENTATION_PRIORITIES.md  MASTER_ARCHITECTURE.puml  MASTER_PROMPT.md  MASTER_VISION.md  TECHNICAL_ARCHITECTURE.md
docs/development/: contributing.md
docs/guides/: Certify Studio System Audit Report.docx
docs/motion-canvas-exploration/: ByteByteGo Quality+ Competitor Analysis.docx  CONVERSATIONAL_MEMORY.md  IMPLEMENTATION_GUIDE.md  MOTION_CANVAS_CRASH_COURSE.md
docs/testing/: TESTING_GUIDE.md  TEST_IMPLEMENTATION_SUMMARY.md
examples/: api_usage.py  integrated_lesson_example.py  unified_graphrag_example.py
frontend/: .env.example  .eslintrc.js  FRONTEND_FEATURES.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  start.bat  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentCard.tsx  AgentDetails.tsx  AgentStatusBar.tsx  CollaborationTimeline.tsx  GenerationProgress.tsx  Layout.tsx  MessageFlow.tsx  MetricCard.tsx  OutputPreview.tsx  RecentGenerations.tsx
frontend/src/hooks/: useAgents.ts  useDashboard.ts
frontend/src/pages/: AgentOrchestrator.tsx  Analytics.tsx  ContentGeneration.tsx  Dashboard.tsx  KnowledgeGraph.tsx  Login.tsx  Settings.tsx
frontend/src/services/: agents.ts  api.ts  auth.ts
frontend/src/stores/: agentStore.ts  authStore.ts
scripts/: auto_fix_launcher.py  check_imports.py  clean_and_sync.bat  clean_reinstall.py  cleanup.bat  commit_agentic.bat  commit_agentic.sh  debug_import.py  dev.py  diagnose_imports.py  direct_test.py  find_multimodal.py  fix_all_imports.py  fix_all_multimodal.py  fix_encoding.py  fix_imports.py  fix_missing_dep.py  fix_pydantic_warnings.py  fix_qa_architecture.py  fix_router_imports.py  fix_vision_imports.py  init_db.bat  install.bat  install.sh  install_accessibility.py  install_audio_deps.py  install_doc_deps.py  install_remaining_deps.py  install_with_uv.py  launch.py  launch_clean.py  launch_simple.py  launch_utf8.py  quick_test.bat  run_diagnostics.py  run_tests.bat  run_tests.py  setup.bat  setup.py  setup_dependencies.py  (+6 more)
scripts/archive/: connect_real_agents.py  fix_agent_api.py  fix_dashboard_api.py
scripts/database/: 01_create_schema.sql  02_seed_data.sql  03_optimize_performance.sql  CHANGE_PASSWORD_GUIDE.md  README.md  apply_optimizations.bat  apply_optimizations.py  health_check.sql  setup_postgresql.bat  setup_postgresql.py  test_connection.bat  test_connection.py  update_env.bat  update_env.py
scripts/fixes/: fix_agent_service.py  fix_frontend_backend.py  fix_indentation.py
scripts/git/: git_push.ps1
scripts/setup/: create_structure.py  install_dependencies.py  install_with_venv.py  remove_secrets.bat  remove_secrets.ps1
src/certify_studio/: __init__.py  app.py  config.py  frontend_connector.py  main.py
temp_fix/: check_line.py
testing_suite/: run_all_tests.py
tests/: README.md  __init__.py  comprehensive_tests_backup.py  conftest.py  run_all_tests.py  run_comprehensive_tests.py  test_backend_connectivity.py  test_comprehensive.py  test_database.py  test_integration.py  test_utils.py
tests/e2e/: test_aws_ai_practitioner_complete.py  test_aws_ai_practitioner_workflow.py  test_aws_certification_complete.py  test_complete_workflows.py  test_workflows.py  test_workflows_old.py
tests/examples/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_agent_collaboration.py  test_agent_monitoring.py  test_api.py  test_api_endpoints.py
tests/unit/: __init__.py  test_agents.py  test_auth.py  test_basic.py  test_events.py  test_imports.py  test_minimal.py  test_models.py  test_schemas.py  test_services.py  test_services_old.py  test_simple.py
(+169 files in other folders)
