[project]
name = "certify-studio"
version = "0.1.0"
description = "AI-powered certification content generation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "httpx>=0.25.2",
    "openai>=1.3.0",
    "langchain>=0.0.340",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "anthropic>=0.8.0",
    "chromadb>=0.4.18",
    "pypdf>=3.17.0",
    "Pillow>=10.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.3",
    "matplotlib>=3.8.0",
    "manim>=0.17.3",
    "networkx>=3.2.1",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "loguru>=0.7.2",
    "prometheus-client>=0.19.0",
    "tenacity>=8.2.3",
    "neo4j>=5.14.0",
    "qdrant-client>=1.7.0",
    "kombu>=5.3.0",
    "psycopg2-binary>=2.9.9",
    "soundfile>=0.13.1",
    "gputil>=1.4.0",
    "pypdf2>=3.0.1",
    "agent>=0.1.3",
    "agents>=1.4.0",
    "api>=0.0.7",
    "auth>=0.5.3",
    "autonomous-agent>=0.0.1",
    "background>=0.2.1",
    "base>=0.0.0",
    "blackboard>=0.1.0",
    "cairosvg>=2.8.2",
    "common>=0.1.2",
    "config>=0.5.1",
    "connection>=2021.7.20",
    "consensus>=1.2.2",
    "constants>=0.6.0",
    "content>=0.0.1",
    "opencv-python>=4.11.0.86",
    "dependencies>=7.7.1",
    "domain>=0.1.4",
    "ebooklib>=0.19",
    "embeddings>=0.0.8",
    "endpoints>=7.3.1",
    "events>=0.5",
    "export>=0.2.1",
    "export-manager>=0.0.5",
    "fitz>=0.0.1.dev2",
    "gtts>=2.5.4",
    "hierarchical>=0.0.9",
    "icons>=1.1",
    "integration>=1",
    "knowledge>=0.3",
    "knowledge-graph-builder>=0.2.2",
    "librosa>=0.11.0",
    "markdown>=3.8.2",
    "messages>=0.7.1",
    "middleware>=1.2.3",
    "nlp>=0.4.0",
    "nltk>=3.9.1",
    "orchestrator>=1.0",
    "performance-monitor>=0.0.1",
    "psutil>=7.0.0",
    "pytesseract>=0.3.13",
    "pyttsx3>=2.99",
    "pyvis>=0.3.2",
    "report-generator>=0.1.10",
    "responses>=0.25.7",
    "routers>=0.10.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "services>=0.1.1",
    "shared>=0.0.32",
    "scikit-learn>=1.7.0",
    "spacy>=3.8.7",
    "strategies>=0.2.3",
    "swarm>=0.0.2",
    "tasks>=2.8.0",
    "themes>=0.0.5",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers>=4.53.2",
    "webrtcvad>=2.0.10",
    "workspace>=0.3.1",
    "tf-keras>=2.18.0",
    "pyyaml>=6.0.2",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "html2text>=2025.4.15",
    "webvtt-py>=0.5.1",
    "pycaption>=2.2.16",
    "speechrecognition>=3.14.3",
    "pydub>=0.25.1",
    "mutagen>=1.47.0",
    "python-docx>=1.2.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",
    "faker>=19.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["certify_studio*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--ignore=docs",
    "--ignore=setup.py",
    "--ignore=alembic",
    "--tb=short",
    "--maxfail=1",
    "--asyncio-mode=auto"
]

markers = [
    "slow: marks tests as slow running",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests", 
    "e2e: marks tests as end-to-end tests",
]

[dependency-groups]
dev = [
    "faker>=37.4.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
